--- a/RepoRapport/Views/Shared/_Layout.cshtml
+++ b/RepoRapport/Views/Shared/_Layout.cshtml
@@ -22,6 +22,12 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                    @if (User.Identity.IsAuthenticated)
+                    {
+                    <li>@Html.ActionLink("Reports", "Index", "Reports")</li>
+                    <li>@Html.ActionLink("Jobs", "Index", "Jobs")</li>
+                    <li>@Html.ActionLink("Members", "Index", "Members")</li>
+                    }
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
