--- a/RepoRapport/Views/Home/Index.cshtml
+++ b/RepoRapport/Views/Home/Index.cshtml
@@ -3,29 +3,27 @@
 }
 
 <div class="jumbotron">
-    <h1>RepoRapport</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <h1>Report/Rapport</h1>
+    <p class="lead">Help the team see performance</p>
+   
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>Getting started</h2>
+        <h2>Members</h2>
         <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
+            Create Members and assign tasks to them 
         </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+        <p><a class="btn btn-default" href="/member/create">Create Member &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+        <h2>Jobs</h2>
+        <p>Create Jobs to assign to a Member</p>
+        <p><a class="btn btn-default" href="/job/create">Create Job &raquo;</a></p>
     </div>
     <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+        <h2>Reports</h2>
+        <p>Create a Report on a completed Job</p>
+        <p><a class="btn btn-default" href="/report/create">Create Job &raquo;</a></p>
     </div>
 </div>
