--- a/RepoRapport/Views/Job/Details.cshtml
+++ b/RepoRapport/Views/Job/Details.cshtml
@@ -18,13 +18,13 @@
             @Html.DisplayFor(model => model.JobID)
         </dd>
 
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.OwnerId)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.OwnerId)
-        </dd>
+        </dd>*@
 
         <dt>
             @Html.DisplayNameFor(model => model.Title)
@@ -77,6 +77,6 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.JobID }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
